/*
 * Copyright 2011 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
//
// The Android internal storage format for per-client state.

syntax = "proto2";


package com.google.protos.ipc.invalidation;


import "proto/client_protocol.proto";

// Base state for an Android client instance.  All of these values
// are constant for the life of the client.
message ClientState {

  // The version of this state.
  optional Version version = 1;

  // A key identifying a specific client on a device.
  optional string client_key = 2;

  // The client type for this client.
  optional int32 client_type = 3;

  // The user account name for this client.
  optional string account_name = 4;

  // The user account type for this client.
  optional string account_type = 5;

  // The authentication token type that is used for requests from this client.
  optional string auth_type = 6;

  // The application package com.google.protos.ipc.invalidation;
  optional string listener_pkg = 7;

  // The class name for the client's event listener.
  optional string listener_class = 8;

}

// Internal properties associated with the client by the client library.  These
// properties may change or grow over time.
message ClientProperty {

  // The key of the stored property
  optional string key = 1;

  // The value of the stored property
  optional bytes value = 2;
}

// The stored state of the client combining base state and internal properties.
message StoredState {
  optional ClientState state = 1;

  // TICL properties stored for this client.
  repeated ClientProperty property = 9;
}
